--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "@types/d3-shape": "^3.1.6",
+    "axios": "^1.7.9",
     "d3-shape": "^3.2.0",
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~51.0.18",
@@ -32,19 +34,19 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-progress": "^5.0.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-scaling": "^0.5.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-toast-message": "^2.2.1",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
