--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "icons": "^1.0.0",
     "jwt-decode": "^4.0.0",
-    "react": "18.2.0",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-progress": "^5.0.1",
@@ -45,8 +47,10 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
